create main menu

--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style.css">
     <title>Wordfall Multiplayer Game</title>
 </head>
 <body>
-    
+    <div id="game-container"></div>
+    <script src="/node_modules/fontfaceobserver/fontfaceobserver.js" defer></script>
+    <script src="./js/pixi.js" defer></script>
+    <script src="./js/mainMenu.js"></script>
+    <script src="./js/app.js" defer></script>
 </body>
 </html>
