--- a/src/index.html
+++ b/src/index.html
@@ -5,11 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
     <title>Wordfall Multiplayer Game</title>
 </head>
 <body>
     <div id="game-container"></div>
-    <script src="/node_modules/fontfaceobserver/fontfaceobserver.js" defer></script>
+    <!-- <script src="../node_modules/fontfaceobserver/fontfaceobserver.js" defer></script> -->
     <script src="./js/pixi.js" defer></script>
     <script src="./js/mainMenu.js"></script>
     <script src="./js/app.js" defer></script>
