--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,8 @@
     <h1 class="font">Wordfall</h1>
     <div id="game-container"></div>
     <script src="./js/pixi.js" defer></script>
-    <script src="./js/mainMenu.js"></script>
+    <script src="./js/mainMenu.js" defer></script>
+    <script src="./js/normalModeUI.js" defer></script>
     <script src="./js/app.js" defer></script>
 </body>
 </html>
