link normal mode and boss mode and add scoreboard

--- a/src/index.html
+++ b/src/index.html
@@ -4,21 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Chewy&display=swap"
-      rel="stylesheet"
-    />
     <link rel="stylesheet" href="./style.css" />
     <title>Wordfall Multiplayer Game</title>
   </head>
   <body>
-    <h1 class="font">Wordfall</h1>
+    <h1 class="font-chewy">Wordfall</h1>
+    <h1 class="font-barlow">Wordfall</h1>
     <div id="game-container"></div>
     <script src="./js/pixi.js" defer></script>
-    <script src="./js/scoreBoard.js" defer></script>
-    <script src="./js/bossScoreBoard.js" defer></script>
     <script src="./js/app.js" defer type="module"></script>
   </body>
 </html>
