add animation to boards

--- a/src/index.html
+++ b/src/index.html
@@ -8,9 +8,11 @@
     <title>Wordfall Multiplayer Game</title>
   </head>
   <body>
-    <h1 class="font-chewy">Wordfall</h1>
+    <h1 class="font-boogaloo">Wordfall</h1>
     <h1 class="font-barlow">Wordfall</h1>
+    <h1 class="font-luckiest-guy">Wordfall</h1>
     <div id="game-container"></div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js"></script>
     <script src="./js/pixi.js" defer></script>
     <script src="./js/app.js" defer type="module"></script>
   </body>
