--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./src/style.css" />
     <title>Wordfall Multiplayer Game</title>
   </head>
   <body>
@@ -13,7 +13,7 @@
     <h1 class="font-luckiest-guy">Wordfall</h1>
     <div id="game-container"></div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js"></script>
-    <script src="./js/pixi.js" defer></script>
-    <script src="./js/app.js" defer type="module"></script>
+    <script src="./src/js/pixi.min.js" defer></script>
+    <script src="./src/js/app.js" defer type="module"></script>
   </body>
 </html>
